--- a/popup.html
+++ b/popup.html
@@ -28,12 +28,13 @@
         </style>
     </head>
     <body>
-        <h3 style="text-align: center;"><img id="icon" src="icon.png" width="20" height="auto" style="vertical-align: middle;"> Blocked Brands On Amazon</h3>
+        <h3 style="text-align: center;"><img id="icon" src="white icon.png" width="20" height="auto" style="vertical-align: middle;"> Blocked Brands On Amazon</h3>
         <textarea id="brands"></textarea>
         <div style="display:flex; width: 256px;">
             <button style="flex:1; background: #ff9900;" id="save">Save</button>
             <button style="margin-left:5px; margin-right:none; width:30px; background: #555555; color: white;" id="mode">☀️</button>
         </div>
+        <p style="text-align: center;">Items Hidden: <span id="blockedAmount">0</span></p>
         <script src="popup.js"></script>
     </body>
 </html>
